# mahc

./: .gitignore  Cargo.toml  README.md  demo.tape
src/: calc.rs  fu.rs  hand.rs  lib.rs  limit_hand.rs  main.rs  payment.rs  score.rs  suit.rs  tile_group.rs  yaku.rs
src/hand/: error.rs
