[package]
name = "mahc"
version = "1.8.1"
edition = "2021"
authors =[  "Tharun <tharun1@hotmail.co.uk>" ]
description = "cli riichi mahjong calculator, which spits out yaku and fu for a given hand"
repository = "https://github.com/DrCheeseFace/mahc"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
serde_json = "1.0"



